
Changes from November 29, 2009

- [FIXED] Table view delete-row animation slides to left, not up

- [FIXED] Table view show-menu animation slides down, not left


Changes from November 27, 2009

- [NEW] loadSynchronous added to TTURLRequest.

- [NEW] TTHighlightBorderStyle New border style with a highlight.
	http://three20.info/api/TTStyle#TTHighlightBorderStyle

- [NEW] TTReflectiveFillStyle styleWithColor:withBottomHighlight:next:
        http://three20.info/api/TTStyle#styleWithColor:withBottomHighlight:next:

- [FIXED] TTReflectiveFillStyle's rendering algorithm now works without magic
          numbers.

- [FIXED] github#108 Show the proper accessoryType for shared URLs.

- [FIXED] github#107 Check for known URL schemes case-insensitively.

- [FIXED] github#106 Update the README to reference the new repo location.

- [FIXED] github#104 Properly show TTTabStrip left/right images.

- [FIXED] github#78 In TTScrollView notify the delegate when the page has
          changed.

Changes from November 19, 2009

- [FIXED] Revert to previous TTIsKeyboardVisible() check

- [FIXED] Zero no longer signifies "cached object never expires"


Changes from November 17, 2009

- [NEW] TTD* logging macros. See TTDebug.h for info.

- [NEW] [NSMutableArray addNonEmptyString:(NSString*)string]

- [NEW] [NSMutableDictionary setNonEmptyString:(NSString*)string forKey:(id)key]

- [NEW] [NSArray containsObject:(id)object withSelector:(SEL)selector]

- [NEW] [NSData md5Hash]

- [DEPRECATED] TTLOG macros should no longer be used, consider switching to TTD* macros.

- [SECURITY] Don't write passwords to the console in TTURLRequests.

- [FIXED] github#67 Set the default cache expiration date for TTURLRequests to
  TT_DEFAULT_CACHE_EXPIRATION_AGE.

- [FIXED] github#85 Disallow recursive calls to wobble.

- [FIXED] github#92 Fix memory leak in TTViewController.

- [FIXED] github#75 Fix memory leak in UIColorAdditions.

- [FIXED] github#11 Add autoresizingMask to TTActivityLabel.
