@@ -1,5 +1,7 @@
 #import <Foundation/Foundation.h>
 #import <UIKit/UIKit.h>
+#import "Three20/TTDebug.h"
+#import "Three20/TTDebugFlags.h"
 #import "Three20/NSObjectAdditions.h"
 #import "Three20/NSStringAdditions.h"
 #import "Three20/NSDateAdditions.h"
@@ -18,7 +20,6 @@
 #import "Three20/UITableViewAdditions.h"
 #import "Three20/UIWebViewAdditions.h"
 #import "Three20/UIToolbarAdditions.h"
-#import "Three20/TTDebug.h"
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 // Logging Helpers
