@@ -1,10 +1,11 @@
 
 Changes from November 29, 2009
 
+- [NEW] TTDCONDITIONLOG added to TTDebug.h
+
 - [FIXED] Table view delete-row animation slides to left, not up
 
 - [FIXED] Table view show-menu animation slides down, not left
-
 
 Changes from November 27, 2009
 
